src/components/CardMini.module.scss
@import '../styles/variables';
@import '../styles/mixins';

.card {
    position: relative;
    height: 26rem;
    width: 14rem;
    border: 2px solid $white;
    border-radius: 6px;

    box-shadow: -2px 2px 5px 2px rgba($black, 0.75);

    cursor: pointer;

    overflow: hidden;

    transition: all 250ms ease-out;

    @include focusState($nia-pink);
}

.coverimage {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;

    &::after {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;

        background: linear-gradient(to bottom right,
            rgba($black, 0.3),
            rgba($black, 0.3),
            rgba($nia-pink, 0.4)
        );
    }

    & > img {
        width: auto;
        height: 100%;
    }

}

.card_title {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;

    width: 95%;

    font-family: $oswald;
    font-size: 2.2rem;
    font-weight: 500;
    line-height: 110%;
    color: $white;
    
    @include stroke($nia-pink, 2px);
}

.section_top {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 30%;

    z-index: 100;
}

.info_top {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    padding: 0.5rem 0.5rem;
    width: 100%;

    font-family: $oswald;
    color: $white;
    font-size: 1.6rem;

    z-index: 500;
}

.info_score {
    display: flex;
    flex-direction: row;
    align-items: center;

    & > img {
        height: 1.6rem;
        width: auto;
        margin-right: 0.2rem;
    }
}

.bg_top {
    position: absolute;
    top: -0.5%;
    left: -0.5%;
    width: auto;
    height: 100%;

    z-index: -1;
}

.section_bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 30%;

    transition: all 300ms ease-out;

    z-index: 100;
}

.bg_bottom {
    position: absolute;
    bottom: -0.5%;
    right: -0.5%;
    width: auto;
    height: 100%;

    transform: rotate(180deg);

    transition: all 300ms ease-out;

    z-index: -1;
}

.info_bottom {
    position: absolute;
    bottom: 0;
    left: 50%;

    transform: translate(-50%, 0%);

    font-family: $oswald;
    color: $white;
    font-size: 1rem;

    padding-bottom: 0.2rem;

    text-align: center;
    width: 100%;
    height: 25%;

    z-index: 500;
}

.options_bottom {
    position: absolute;
    bottom: 5%;
    left: 50%;

    transform: translate(-50%, 0%);

    width: 80%;

    display: flex;
    flex-direction: column;

    animation: slideUp 300ms;

    & > button {
        @include btnOutline($white);
        font-size: 1.5rem !important;

        & > a {
            color: $white;
            text-decoration: none;
        }

        &:hover {
            cursor: pointer;
        }

        &:first-child {
            margin-bottom: 1rem;
        }
    }
}

.reco_blur {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba($black, 0.5);

    cursor: pointer;

    z-index: 750;
}

@keyframes slideUp {
    0% {
        opacity: 0;
        bottom: -15%;
    }
    100% {
        opacity: 1;
        bottom: 5%;
    }
}

